  - getCreditNotes() does no longer return null but this for a credit note.
  - getCurrency() and getTotals() to use the new Currency and Totals classes.
- Renamed ShopCapabilities::getShopDefaults() to ShopCapabilities::getDefaultShopConfig()
  and added ShopCapabilities::getDefaultShopMappings(). Moved all mappings in the
  getShopDefaults() of each shop to getDefaultShopMappings().


7.6.8 (2023-04-??)
-----------------------
Bugs:
- PS: Nauwkeurigheid van bedragen bij creditfacturen is slechter dan aangenomen, precisie
  is nu op 1 cent gezet.

Refactoring:
- ALL: Use distinct messages for the cases where an invoice is not sent because a lock
  exists versus a lock could not be obtained.
- PS: Use Appkernel::VERSION as version not the indirect _PS_VERSION_.


7.6.7 (2023-03-30) (PS)
-----------------------
Bugs:
- PS: Error: Unsupported operand types in ..PrestaShop\Invoice\Creator->mergeProductLines.
  Actually this looks like a corrupt database, but maybe there is indeed just no product
  detail info for a given order line.


7.6.6 (2023-03-05) (WC)
-----------------------
Bugs
- WC: TypeError: substr() expects parameter 1 to be string, null given in
  FormHelper.php:207.


7.6.5 (2023-03-02) (JOO+PS+WC)
------------------------------
Bugs:
- PS: Wrong conversion specification in sprintf() in AcumulusEntryManager::insert.
- JOO4: Call to undefined method Joomla\CMS\Installer\Adapter\ComponentAdapter::get(),
  Extension Update: Custom install routine failure.
- WC: PHP Fatal error: declaration of WooCommerce\FormHelper::getMeta() must be compatible
  with parent definition.
- WC: TypeError: Return value of Siel\Acumulus\WooCommerce\Helpers\Token::getMetaDataValue()
  must be of the type string or null, bool returned.


7.6.4 (2023-02-07) (MA+PS)
--------------------------
Features:
- PHP8.2 awareness: removed use of a dynamic property in class Log.
- ALL: Fatal errors will now log stack trace (fallback for when mail does not work).

Bugs: