@@ -277,7 +277,7 @@ abstract class ShopCapabilities extends ShopCapabilitiesBase
     public function getDateToUseOptions(): array
     {
         $result = parent::getDateToUseOptions();
-        unset($result[Config::InvoiceDate_InvoiceCreate]);
+        unset($result[Config::IssueDateSource_InvoiceCreate]);
         return $result;
     }
 
