@@ -19,6 +19,7 @@ Refactorings:
 - Renamed ShopCapabilities::getShopDefaults() to ShopCapabilities::getDefaultShopConfig()
   and added ShopCapabilities::getDefaultShopMappings(). Moved all mappings in the
   getShopDefaults() of each shop to getDefaultShopMappings().
+- Renamed Config::InvoiceDate_... constants to Config::IssueDateSource_...
 
 
 7.6.8 (2023-04-??)
